--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/node": "22.2.0",
     "tsx": "4.17.0",
     "typescript": "5.5.4"
