--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,15 @@
     "npm": "10.8.1"
   },
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch --env-file .env src/http/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "drizzle-orm": "0.33.0"
+    "drizzle-orm": "0.33.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
