--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "drizzle-orm": "0.33.0",
+    "postgres": "3.4.4",
     "zod": "3.23.8"
   },
   "devDependencies": {
