--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@paralleldrive/cuid2": "2.2.2",
     "drizzle-orm": "0.33.0",
     "postgres": "3.4.4",
     "zod": "3.23.8"
