--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "npm": "10.8.1"
   },
   "scripts": {
-    "dev": "tsx watch --env-file .env src/http/server.ts"
+    "dev": "tsx watch --env-file .env src/http/server.ts",
+    "seed": "tsx --env-file .env src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@paralleldrive/cuid2": "2.2.2",
+    "dayjs": "1.11.12",
     "drizzle-orm": "0.33.0",
     "postgres": "3.4.4",
     "zod": "3.23.8"
