--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "9.0.1",
     "@paralleldrive/cuid2": "2.2.2",
     "dayjs": "1.11.12",
     "drizzle-orm": "0.33.0",
+    "fastify": "4.28.1",
+    "fastify-type-provider-zod": "2.0.0",
     "postgres": "3.4.4",
     "zod": "3.23.8"
   },
