--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-progress": "1.1.0",
     "@radix-ui/react-radio-group": "1.2.0",
+    "@tanstack/react-query": "5.51.23",
+    "dayjs": "1.11.12",
     "lucide-react": "0.427.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
