--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "server",
+  "name": "in-orbit-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "license": "BSD-3",
+  "main": "src/http/server.ts",
   "engines": {
     "node": "20.16.0",
     "npm": "10.8.1"
@@ -13,10 +15,6 @@
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx --env-file .env src/db/seed.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@fastify/cors": "9.0.1",
     "@paralleldrive/cuid2": "2.2.2",
