--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "biomejs.biome"
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": true
+  },
+  "files.exclude": {
+    "**/node_modules/": true
+  }
 }
