--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -6,5 +6,11 @@
     "javascript": "jsx"
   },
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "biomejs.biome"
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": true
+  },
+  "files.exclude": {
+    "**/node_modules/": true
+  }
 }
